--- a/probdist.qmd
+++ b/probdist.qmd
@@ -314,7 +314,79 @@ There are multiple types of $\chi^2$ test, including the following we will cover
 
 -   $\chi^2$ test of independence
 
-### $\chi^2$ Goodness-of-fit test
+### $\chi^2$ goodness-of-fit test
+
+A $\chi^2$ goodness-of-fit test looks at a vector of data, or counts in different categories, and asks if the observed frequencies vary from the expected frequencies.
+
+#### $\chi^2$ estimate by hand
+
+Let's say, for example, we have the following dataset:
+
+| Hour  | No. Drinks Sold |
+|-------|-----------------|
+| 6-7   | 3               |
+| 7-8   | 8               |
+| 8-9   | 15              |
+| 9-10  | 7               |
+| 10-12 | 5               |
+| 12-13 | 20              |
+| 13-14 | 18              |
+| 14-15 | 8               |
+| 15-16 | 10              |
+| 16-17 | 12              |
+
+Now, we can ask if the *probability* of selling drinks is the same across all time periods.
+
+```{r}
+drinks <- c(3, 8, 15, 7, 5, 20, 18, 8, 10, 12)
+```
+
+We can get the expected counts by assuming an equal probability for each time period; thus, $Exp(x)=\frac{N}{categories}$.
+
+```{r}
+# sum all values for total number
+N <- sum(drinks)
+
+# get length of vector for categories
+cats <- length(drinks)
+
+# repeat calculation same number of times as length
+exp_drinks <- rep(N/cats, cats)
+
+exp_drinks
+```
+
+Now, we can do out $\chi^2$ calculation.
+
+```{r}
+chi_vals <- ((drinks - exp_drinks)^2)/exp_drinks
+
+chi_vals
+```
+
+```{r}
+sum(chi_vals)
+```
+
+And now, to get the probability.
+
+```{r}
+pchisq(sum(chi_vals), # chi stat
+       df = length(chi_vals) - 1, # degrees of freedom
+       lower.tail = FALSE) # looking RIGHT
+```
+
+Here, we get $p = 0.002$, indicating that there is not an equal probability for selling drinks at different times of day.
+
+#### $\chi^2$ estimation by code
+
+We can use the test `chisq.test` to perform this analysis as well.
+
+```{r}
+chisq.test(drinks)
+```
+
+As we can see, these values are exactly the same as we just calculated by hand! ***Note*** that we can define the probability `p` if we want, otherwise it defaults to `p = rep(1/length(x), length(x))`.
 
 ### $\chi^2$ test of independence
 
@@ -422,6 +494,14 @@ expected
 
 Here, we can see our expected number are not quite 50/50! this will give us a different result than our previous iteration.
 
+```{r}
+e_o2 <- ((data - expected)^2)/expected
+
+sum(e_o2)
+```
+
+Now we have a $\chi^2$ of 7.5 - which, as we will see below, is the exact same value as we get for an uncorrected `chisq.test` from *R*'s default output.
+
 #### $\chi^2$ estimations in *R*
 
 We can calculate this in *R* by entering in the entire table and using `chisq.test`.
@@ -455,10 +535,49 @@ Given the slight differences in calculation between by hand and what the functio
 
 ## Fisher's exact test
 
-To be completed; involves calculations on smaller datasets.
+$\chi^2$ tests don't work in scenarios where we have very small count sizes, such as a count size of 1. For these situations with small sample sizes and very small count sizes, we use Fisher's exact test. This test gives us the $p$ value directly - no need to use a table of any kind! Let's say we have a $2x2$ contingency table, as follows:
+
+|     |     |
+|-----|-----|
+| $a$ | $b$ |
+| $c$ | $d$ |
+
+Where row totals are $a+b$ and $c + d$ and column totals are $a + c$ and $b + d$, and $n = a + b + c + d$. We can calculate $p$ as follows:
+
+$$
+p = \frac{(a+b)!(c+d)!(a+c)!(b+d)!}{a!b!c!d!n!}
+$$
+
+In *R*, we can use the command `fisher.test` to perform these calculations. For example, we have the following contingency table, looking at the number of undergrads and graduate students in introductory and graduate level statistics courses:
+
+|                 | Undergrad | Graduate |
+|-----------------|-----------|----------|
+| **Intro Stats** | 8         | 1        |
+| **Grad Stats**  | 3         | 5        |
+
+```{r}
+stats_students = matrix(data = c(8,1,3,5),
+                        byrow = T, ncol = 2, nrow = 2)
+
+stats_students
+```
+
+```{r}
+fisher.test(stats_students)
+```
+
+In this situation, $p = 0.05$ when rounded, so we would fail to reject but note that this is borderline.
 
 ## Homework
 
 ### Chapter 5
 
+Complete problems 5.1, 5.2, 5.3, 5.5, 5.6, 5.11, 5.12, 5.13, 5.14, and 5.20 as written in your textbook. Be sure to show your work, and submit your assignment as a knitted `html` document.
+
 ### Chapter 7
+
+Complete problems 7.1, 7.2, 7.3, 7.5, and 7.7 as written in your text books. For these problems, please also state your *null* and *alternative* hypotheses, as well as a conclusion as to whether you *support* or *reject* the null.
+
+Next, do problems 7.9 and 7.11. For these two problems, pick which test is best and then perform said test. State your hypothesis and make a conclusion with respect to your $p$ value.
+
+Be sure to submit your homework as a knitted `html` document.
