Updated t-test page

--- a/references.bib
+++ b/references.bib
@@ -58,3 +58,12 @@
     url = "https://figshare.com/articles/dataset/BeeWalk_dataset_2008-19/12280547",
     doi = "10.6084/m9.figshare.12280547.v4"
 }
+
+@article{Courtenay2019,
+    author = "Lloyd Courtenay",
+    title = "{Measurements on Canid Tooth Scores}",
+    year = "2019",
+    month = "10",
+    url = "https://figshare.com/articles/dataset/Measurements_on_Canid_Tooth_Scores/8081108",
+    doi = "10.6084/m9.figshare.8081108.v1"
+}
