--- a/intro_to_r.qmd
+++ b/intro_to_r.qmd
@@ -164,19 +164,16 @@ At any point in *R*, you can look up "help" for a specific function by typing `?
 
 Throughout this course, we are going to have to work with datasets that are from our book or other sources. Here, we are going to work through an example dataset. First, we need to install *libraries*. A *library* is a collated, pre-existing batch of code that is designed to assist with data analysis or to perform specific functions. These *libraries* make life a lot easier, and create short commands for completing relatively complex tasks.
 
-In this class, there are two libraries that you will need *almost every week*! First, we need to install the libraries. The main libraries we need for this class are:
+In this class, there is one major library that you will need *almost every week*! First, we need to install this library:
 
-1.  `cURL`: this package allows us to download things from URLs. We will be using this to download data files. *Otherwise, you will have to enter all data by hand!*
-2.  `tidyverse`: this package is actually a [group of packages](https://www.tidyverse.org/) designed to help with data analysis, management, and visualization.
+1.  `tidyverse`: this package is actually a [group of packages](https://www.tidyverse.org/) designed to help with data analysis, management, and visualization.
 
 **NOTE: If you leave the install prompts in your RMarkdown document, *it will not knit!***
 
 ```{r, eval=FALSE}
 # run this code the first time ONLY
+# DO NOT INCLUDE IN RMD FILE
 # does not need to be run every time you use R!
-
-# curl allows for internet downloads
-install.packages("curl")
 
 # tidyverse has a bunch of packages in it!
 # great for data manipulation
@@ -190,10 +187,6 @@ update.packages()
 After packages are installed, we will need to load them into our *R* environment. While we only need to `install.packages` once on our machine, we need to load libraries *every time we restart the program*!
 
 ```{r}
-library(curl)
-```
-
-```{r}
 library(tidyverse)
 ```
 
@@ -202,7 +195,7 @@ You should an output like the above. What this means is:
 1.  The core packages that comprise the tidyverse loaded successfully, and version numbers for each are shown.
 2.  The conflicts basically means that certain commands will not work as they used to because *R* has "re-learned" a particular word.
 
-To clarify the conflicts, pretend that you can only know one definition of a word at a time. You may know the word "cola" as a type of soda pop or as a drink in general. However, in Spanish, "cola" refers to a line or a tail. While we can learn both of these definitions and know which one is which because of context, a computer can't do that. In *R*, we would then have to specify which "cola" we are refferring to. We do this by listing the package before the command; in this case, `english::cola` would mean a soda pop and `spanish::cola` would refer to a line or tail. If we just type `cola`, the computer will assume one of these definitions but not even consider the other.
+To clarify the conflicts, pretend that you can only know one definition of a word at a time. You may know the word "cola" as a type of soda pop or as a drink in general. However, in Spanish, "cola" refers to a line or a tail. While we can learn both of these definitions and know which one is which because of context, a computer can't do that. In *R*, we would then have to specify which "cola" we are referring to. We do this by listing the package before the command; in this case, `english::cola` would mean a soda pop and `spanish::cola` would refer to a line or tail. If we just type `cola`, the computer will assume one of these definitions but not even consider the other.
 
 We won't have to deal with conflicts much in this class, and I'll warn you (or help you) if there is a conflict.
 
@@ -211,20 +204,15 @@ We won't have to deal with conflicts much in this class, and I'll warn you (or h
 Now, we need to download our first data set. These datasets are stored on GitHub. We are going to be looking at data from Dr. Cooper's dissertation concerning Afrotropical bird distributions [@cooper_biogeographic_2021]. This website is in the data folder on this websites' GitHub page, [accessible here](https://github.com/jacobccooper/biol105_unk/blob/main/datasets/lacustrine_range_size.csv).
 
 ```{r}
-# first, declare filepath
-# I will try to give you the filepath for each assignment
-# if not, check the URL pattern for the file
-
-# create
-ranges.url <- curl("https://raw.githubusercontent.com/jacobccooper/biol305_unk/main/datasets/lacustrine_range_size.csv")
 # read comma separated file (csv) into R memory
-ranges <- read_csv(ranges.url)
+# reads directly from URL
+ranges <- read_csv("https://raw.githubusercontent.com/jacobccooper/biol305_unk/main/datasets/lacustrine_range_size.csv")
 ```
 
 Alternatively, we can use the operator `%>%` to simplify this process. `%>%` means "take whatever you got from the previous step and *pipe* it into the next step". So, the following does the exact same thing:
 
 ```{r}
-ranges <- curl("https://raw.githubusercontent.com/jacobccooper/biol305_unk/main/datasets/lacustrine_range_size.csv") %>%
+ranges <- "https://raw.githubusercontent.com/jacobccooper/biol305_unk/main/datasets/lacustrine_range_size.csv" %>%
   read_csv()
 ```
 
