--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -14,9 +14,6 @@ Descriptive statistics enable researchers to quickly and easily examine the "beh
 As with every week, we will need to load our relevant packages first. This week, we are using the following:
 
 ```{r}
-# allows for internet downloading
-library(curl)
-
 # enables data management tools
 library(tidyverse)
 ```
@@ -26,8 +23,7 @@ library(tidyverse)
 For the example this week, we will be using the `starbucks` dataset, describing the number of drinks purchased during particular time periods during the day.
 
 ```{r}
-starbucks <- curl("https://raw.githubusercontent.com/jacobccooper/biol105_unk/main/datasets/starbucks.csv") %>%
-  read_csv()
+starbucks <- read_csv("https://raw.githubusercontent.com/jacobccooper/biol105_unk/main/datasets/starbucks.csv")
 ```
 
 ## Descriptive statistics
@@ -560,8 +556,7 @@ mean(nebraskans) %>%
 The following is a dataset looking at oceanic conditions and other variables associated with pirate attacks within the region between 2010 and 2021 [@Moura2023]. Using these data, please calculate the mean, median, range, interquartile range, variance, standard deviation, coefficient of variation, standard error, and whether there are any "outliers" for distance from shore for each pirate attack (column `Distance_from_Coast`).
 
 ```{r}
-url_file <- curl("https://figshare.com/ndownloader/files/42314604")
-pirates <- url_file %>% read_csv()
+pirates <- read_csv("https://figshare.com/ndownloader/files/42314604")
 ```
 
 **Synthesis question**: Do you notice any patterns in distance from shore? What may be responsible for these patterns? *Hint*: Think about what piracy entails and also what other columns are available as other variables in the above dataset.
@@ -571,9 +566,7 @@ pirates <- url_file %>% read_csv()
 The following is a dataset on skin sores in different communities in Australia and Oceania, specifically looking at the amount of time that passes between skin infections [@lydeamore_estimation_2020]. This file includes multiple different datasets, and focuses on data from children in the first five years of their life, on househould visits, and on data collected during targeted studies [@Lydeamore2020].
 
 ```{r}
-url_file <- curl("https://doi.org/10.1371/journal.pcbi.1007838.s006")
-
-ages <- url_file %>% read_csv()
+ages <- read_csv("https://doi.org/10.1371/journal.pcbi.1007838.s006")
 ```
 
 Let's see what this file is like real fast. We can use the command `dim` to see the `rows` and `columns`.
